# PyNvCodecBackup

./: .gitattributes  CMakeLists.txt  MANIFEST.in  PKG-INFO  README.md  README.rst  pyproject.toml  setup.py
src/: CMakeLists.txt
src/NvEncVersionCheck/: CMakeLists.txt  pyproject.toml  setup.py
src/NvEncVersionCheck/VersionCheck/: NvEncVersionCheck.cpp  NvEncoder.h  __init__.py  nvEncodeAPI_120.h
src/PyNvVideoCodec/: CMakeLists.txt
src/PyNvVideoCodec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyNvVideoCodec/inc/: DLPackUtils.hpp  DecoderCommon.hpp  ExternalBuffer.hpp  NvDemuxer.hpp  NvEncoderClInterface.hpp  PyCAIMemoryView.hpp  PyNvDecoder.hpp  PyNvDemuxer.hpp  PyNvEncoder.hpp  PyNvVideoCodec.hpp  SeekUtils.hpp  SimpleDecoder.hpp  SimpleTranscoder.hpp  ThreadedDecoder.hpp  Version.hpp.in
src/PyNvVideoCodec/src/: DLPackUtils.cpp  DecoderCommon.cpp  ExternalBuffer.cpp  NvDemuxer.cpp  NvEncoderClInterface.cpp  PyCAIMemoryView.cpp  PyNvDecoder.cpp  PyNvDemuxer.cpp  PyNvEncoder.cpp  PyNvSimpleDecoder.cpp  PyNvSimpleTranscoder.cpp  PyNvThreadedDecoder.cpp  PyNvVideoCodec.cpp  SeekUtils.cpp  SimpleDecoder.cpp  SimpleTranscoder.cpp  ThreadedDecoder.cpp
src/PyNvVideoCodec/utils/: DecoderCache.hpp  HashUtils.hpp  PyNvVideoCodecUtils.hpp  SPSCBuffer.hpp
src/VideoCodecSDKUtils/: CMakeLists.txt
src/VideoCodecSDKUtils/Interface/: configNvEncVer.h  cuviddec.h  nvEncodeAPI_121.h  nvEncodeAPI_130.h  nvcuvid.h
src/VideoCodecSDKUtils/helper_classes/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
src/VideoCodecSDKUtils/helper_classes/NvCodec/NvEncoder/: NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoder_121.cpp  NvEncoder_121.h  NvEncoder_130.cpp  NvEncoder_130.h
src/VideoCodecSDKUtils/helper_classes/Utils/: BitDepth.cu  ColorSpace.cu  ColorSpace.h  FFmpegDemuxer.h  FFmpegMuxer.h  FFmpegStreamer.h  Logger.h  NvCodecUtils.h  NvEncoderCLIOptions.h  Resize.cu  crc.cu  cuvidFunctions.h  cuvid_dlopen.h  cuvid_dlopen_unix.cpp  cuvid_dlopen_windows.cpp  cuvid_function_pointer.h
src/cmake/: ffmpeg.cmake
